# nexar

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: allreduce.rs  barrier.rs  broadcast.rs
nexar/: Cargo.toml
nexar-nccl/: Cargo.toml  README.md
nexar-nccl/src/: bootstrap.rs  comm.rs  error.rs  group.rs  lib.rs  topology.rs  types.rs
nexar-nccl/src/collective/: allgather.rs  allreduce.rs  barrier.rs  broadcast.rs  mod.rs  reduce.rs
nexar-nccl/tests/: hierarchical.rs
nexar-rdma/: Cargo.toml  README.md
nexar-rdma/src/: bootstrap.rs  client_ext.rs  cuda_adapter.rs  ext.rs  lib.rs
nexar-rdma/src/gpudirect/: context.rs  mod.rs  mr.rs  qp.rs
nexar-rdma/src/rdma/: connection.rs  context.rs  memory.rs  mod.rs  mr.rs
nexar-rdma/tests/: rdma_mesh.rs
nexar/examples/: allreduce.rs  broadcast.rs  rpc.rs  seed_worker.rs  send_recv.rs
nexar/src/: config.rs  error.rs  lib.rs  reduce.rs  reduce_simd.rs  reduce_types.rs  types.rs
nexar/src/client/: async_client.rs  bootstrap.rs  bootstrap_mesh.rs  byte_transport.rs  collectives.rs  collectives_nb.rs  elastic.rs  hash.rs  messaging.rs  mod.rs  rebuild.rs  split.rs  sync_client.rs  typed_collectives.rs
nexar/src/cluster/: elastic.rs  health.rs  mod.rs  recovery.rs  seed.rs  sparse.rs  topology.rs  worker.rs
nexar/src/collective/: allgather.rs  allreduce.rs  alltoall.rs  barrier.rs  broadcast.rs  bucketed_allreduce.rs  compressed_allreduce.rs  gather.rs  handle.rs  helpers.rs  mod.rs  pipelined_allreduce.rs  reduce.rs  reduce_scatter.rs  rs_ag_allreduce.rs  scan.rs  scatter.rs
nexar/src/compression/: mod.rs  none.rs  randomk.rs  topk.rs  traits.rs
nexar/src/device/: adapter.rs  cpu.rs  mod.rs
nexar/src/memory/: buffer.rs  global_ptr.rs  mod.rs
nexar/src/protocol/: codec.rs  header.rs  message.rs  mod.rs
nexar/src/reduce_simd/: aarch64.rs  mod.rs  x86_64.rs
nexar/src/rpc/: dispatcher.rs
nexar/src/transport/: buffer_pool.rs  connection.rs  listener.rs  mod.rs  relay.rs  router.rs  stream_pool.rs  tcp_bulk.rs  tls.rs
nexar/tests/: collective.rs  elastic.rs  fault_injection.rs  recovery.rs  sparse.rs
nexar/tests/collective/: allreduce.rs  barrier.rs  broadcast.rs  compressed.rs  exchange.rs  helpers.rs  iov.rs  nonblocking.rs  reduce.rs  rpc.rs  rs_ag_allreduce.rs  scan.rs  split.rs  tagged.rs
src/: error.rs  lib.rs  reduce.rs  types.rs
src/client/: async_client.rs  bootstrap.rs  mod.rs  sync_client.rs
src/cluster/: mod.rs  seed.rs  topology.rs  worker.rs
src/collective/: allgather.rs  allreduce.rs  alltoall.rs  barrier.rs  broadcast.rs  helpers.rs  mod.rs  reduce_scatter.rs  scan.rs
src/device/: cpu.rs  cuda.rs  mod.rs
src/memory/: mod.rs
src/protocol/: codec.rs  header.rs  message.rs
src/rpc/: dispatcher.rs  mod.rs  registry.rs
src/transport/: buffer_pool.rs  connection.rs  listener.rs  mod.rs  router.rs  tls.rs
src/transport/rdma/: connection.rs  gpudirect.rs  memory.rs  mod.rs
tests/: collective.rs
