[workspace]
members = ["nexar", "nexar-rdma", "nexar-nccl"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
crossbeam-queue = "0.3"
indexmap = "2"
cudarc = { version = "0.19", default-features = false, features = [
  "driver", "dynamic-loading", "std", "cuda-version-from-build-system", "fallback-latest",
] }
