[workspace]
members = ["nexar", "nexar-rdma", "nexar-nccl"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/nexar"

[workspace.dependencies]
nexar = { version = "0.1.0", path = "nexar" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
crossbeam-queue = "0.3"
indexmap = "2"
cudarc = { version = "0.19", default-features = false, features = [
  "driver", "dynamic-loading", "std", "cuda-version-from-build-system", "fallback-latest",
] }
