[package]
name = "nexar-nccl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "NCCL integration for nexar — hierarchical communicator combining NCCL intra-node with nexar inter-node"
license.workspace = true
repository.workspace = true
keywords = ["nccl", "gpu", "distributed", "allreduce", "hpc"]
readme = "README.md"
categories = ["network-programming"]

[dependencies]
nexar.workspace = true
cudarc = { workspace = true, features = ["nccl"] }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
gethostname = "1"
indexmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
