[package]
name = "nexar-rdma"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RDMA and GPUDirect transport extensions for nexar"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/nexar"
keywords = ["rdma", "infiniband", "gpudirect", "distributed", "hpc"]
readme = "README.md"
categories = ["network-programming"]

[dependencies]
nexar = { path = "../nexar" }
ibverbs-sys = { version = "0.3" }
crossbeam-queue = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }

# Optional: GPUDirect RDMA (GPU memory → NIC directly)
cudarc = { workspace = true, optional = true }

[features]
default = []
gpudirect = ["dep:cudarc"]
