[package]
name = "nexar-rdma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RDMA and GPUDirect transport extensions for nexar"
license.workspace = true
repository.workspace = true
keywords = ["rdma", "infiniband", "gpudirect", "distributed", "hpc"]
readme = "README.md"
categories = ["network-programming"]

[dependencies]
nexar.workspace = true
ibverbs-sys = "0.3"
libc = "0.2"
crossbeam-queue.workspace = true
futures = "0.3"
tokio.workspace = true
tracing.workspace = true

# Optional: GPUDirect RDMA (GPU memory → NIC directly)
cudarc = { workspace = true, optional = true }

[features]
default = []
gpudirect = ["dep:cudarc"]
