[package]
name = "nexar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Distributed runtime with QUIC transport, stream-multiplexed messaging, and built-in collectives"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["distributed", "quic", "mpi", "allreduce", "hpc"]
categories = ["network-programming", "asynchronous", "science"]

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
rkyv = { version = "0.8", features = ["alloc"] }
tokio.workspace = true
bytes = "1"
thiserror.workspace = true
tracing.workspace = true
rcgen = "0.14"
crossbeam-queue.workspace = true
futures = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = "0.3"
